--- a/43-indirect-vs-direct.qmd
+++ b/43-indirect-vs-direct.qmd
@@ -11,17 +11,13 @@ Seasonally adjusted series of aggregates can be derived in two ways: either dire
 Generally, the results will differ, sometimes significantly.
 Conceptually, neither the direct approach nor the indirect approach is optimal, and we will discuss some arguments later on.
 
-Intuitively, indirect adjustment is generally better when the components have
-- Distinct seasonal patterns
-- Adjustments of good quality
+Intuitively, indirect adjustment is generally better when the components have - Distinct seasonal patterns - Adjustments of good quality
 
-Direct generally is generally better when the components have
-- Similar seasonal patterns (summing the series may cancel some noise)
+Direct generally is generally better when the components have - Similar seasonal patterns (summing the series may cancel some noise)
 
 Before we go into the details of the distinction between direct and indirect adjustment, let's take a look at how *seasonal* can handle multiple time series.
 
 https://github.com/jlivsey/CR-SAclass/blob/master/slides/\_11SeasAdjDiags.pdf
-
 
 ### Multiple Series adjustmtent
 
@@ -155,22 +151,16 @@ If the differences are insignificant, accounting and aggregation relationships i
 
 X-13 offers various diagnostics to Compare Direct and Indirect Adjustments
 
-- Spectral graphs
-- Sliding spans
-  - Set the same sliding spans length for all components
-- Revisions history
-  - Set the same history span for all components
-
-- Smoothness measures (Statistics Canada introduced in X-11-ARIMA)
-  - (We don't use these much)
+-   Spectral graphs
+-   Sliding spans
+    -   Set the same sliding spans length for all components
+-   Revisions history
+    -   Set the same history span for all components
+-   Smoothness measures (Statistics Canada introduced in X-11-ARIMA)
+    -   (We don't use these much)
 
 When the indirect approach is considered, seasonally adjusted aggregates should be checked to exclude the presence of residual seasonality using the F-test available in X-13.
 
 X-13 offers various diagnostic tools to evaluate the direct and indirect adjustment of aggregates.
 The program calculates seasonally adjusted aggregates using the direct and indirect approach and provides in output a set of statistics to compare the results (M diagnostics, measures of smoothness, frequency spectrum diagnostics, etc.).
 Furthermore, sliding spans and revision history diagnostics can be requested to assess which of the two approaches provides more stable and reliable seasonally adjusted results.
-
-
-
-
-
