--- a/references.bib
+++ b/references.bib
@@ -278,3 +278,11 @@
   pages = {1--17},
   doi = {10.18637/jss.v087.i11},
 }
+
+@incollection{lee20187,
+  title={7. Seasonal Adjustment},
+  author={Lee, Kwangwon},
+  booktitle={Quarterly National Accounts Manual (2017 Edition)},
+  year={2018},
+  publisher={International Monetary Fund}
+}
