--- a/42-annual-constraining.qmd
+++ b/42-annual-constraining.qmd
@@ -4,54 +4,101 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("polishing")  # drafting, polishing, complete
 ```
 
+```{=html}
 <!-- -   Should the annual values be restrained?
 
 -   How to use the force spec
  -->
-
-
-
+```
 ### The Problem
 
 Seasonal adjustment may affect the annual values of a series.
-The yearly total of an adjusted series usually differs from the total fo an unadjusted series. By applying the Denton Method, the adjustment procedure used by the SECO enforces the totals to be equal. In seasonal, this can be performed with the option `force.type = "denton"`.
+The yearly total of an adjusted series usually differs from the total of an unadjusted series.
+By applying the Denton Method, the adjustment procedure can be used to enforce the totals to be equal.
+In seasonal, this can be performed with the option `force.type = "denton"`.
 
+### Annual constraining
+
+The yearly total of a seasonally adjusted series is usually not exactly equal to the yearly total of the original series.
+
+There is no theoretical reason why the annual totals of the original series and the seasonally adjusted series should be the same.
+For example, the number of trading days may differ in different years, and we would expect a trading day adjusted series to be different at the annual level.
+
+Sometimes, however, may be useful to apply annual constraining.
+The reason for this is usually to lower confusion for the end users.
+
+To constrain the annual totals, X13 includes a version of the Denton method.
 
 ### Re-adjusting annual values
+
+Let's start with a SEATS adjustment of `AirPassengers`:
 
 ```{r}
 m <- seas(AirPassengers)
 ```
 
+The tsbox package can be used to compute annual totals.
+As for `AirPassengers`, the annual total is the sum of the monthly values, but it sometimes makes sense to use `"mean"` as an aggregation function:
+
 ```{r}
 library(tsbox)
-
-ts_plot(
-  ts_frequency(final(seas(AirPassengers)), aggregate = "sum"),
-  ts_frequency(AirPassengers, aggregate = "sum")
-)
+ts_frequency(final(seas(AirPassengers)), aggregate = "sum")
+ts_frequency(AirPassengers, aggregate = "sum")
 ```
 
-
+As we can see, there are minor differences between the series.
+However, in this case, the differences are rather small, and at most as large as half a percentage point:
 
 ```{r}
+100 * (ts_frequency(final(seas(AirPassengers)), aggregate = "sum") /
+ts_frequency(AirPassengers, aggregate = "sum") - 1)
+```
 
+By applying `force.type = "denton"`, we constrain the annual values to be the same:
+
+```{r}
 ts_frequency(final(seas(AirPassengers, force.type = "denton")), aggregate = "sum")
-
 ts_frequency(AirPassengers, aggregate = "sum")
-
 ```
 
 ### Should the annual values be restrained?
 
+As mentioned above, there is no theoretical reason why annual constraining should be applied.
 
+Applying annual constraining ensures that the annual values are the same, independent of whether a user looks at the adjusted or at the non-adjusted series, leading to less confusion and a potentially higher user satisfaction.
 
+Some criteria from @ONS07 (Chapter 8.2.2):
+
+Use
+
+:   consider how the data are used and any stated preferences of users.
+    This criterion will sometimes override the other criteria.
+    For example, if the series are part of the National Accounts dataset, they will probably need to be constrained.
+
+Concept
+
+:   decide whether annual constraining makes conceptual sense for your time series.
+    Consider, for example, how the timing of the observations in your time series relate to calendar years (thinking carefully about the way the data are collected and compiled) and what they represent.
+    It may be apparent from this that annual constraining is inappropriate for your series.
+    Consider the following examples: the observations in the Labor Force Survey are a sequence of overlapping 3-month averages; Retail Sales data are collected on a 4, 4, 5 week pattern rather than a calendar month basis; prices, earnings, claimant count and many other series are points in time series, for which averaging to the same annual averages might have little presentational importance.
+
+Continuity
+
+:   if a time series is already being seasonally adjusted, then strong reasons are needed for changing the approach to constraining.
+    Avoid switching between applying and not applying annual constraining every few years.
+
+Effect
+
+:   look at the final series to see if the differences (or ratios if multiplicative) between the constrained and unconstrained data are large.
+    If they are negligible, and the other criteria are satisfied, then annual constraining may be preferable.
+
+```{=html}
 <!--
 -   Should the annual values be restrained?
 
 -   How to use the force spec
  -->
-
+```
