--- a/43-indirect-vs-direct.qmd
+++ b/43-indirect-vs-direct.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("polishing")  # drafting, polishing, complete
 ```
 
 Seasonally adjusted series of aggregates can be derived in two ways: either directly by adjusting the aggregates or indirectly by aggregating seasonally adjusted data of the component series.
@@ -16,13 +16,13 @@ Intuitively, indirect adjustment is generally better when the components have:
 -   Distinct seasonal patterns
 -   Adjustments of good quality
 
-Direct generally is generally better when the components have:
+Direct adjustment is generally better when the components have:
 
 -   Similar seasonal patterns (summing the series may cancel some noise)
 
 Before we go into the details of the distinction between direct and indirect adjustment, let's take a look at how *seasonal* can handle multiple time series.
 
-### Multiple Series adjustmtent
+### Multiple Series adjustment
 
 Since [seasonal version 1.8](https://cran.r-project.org/package=seasonal), it is now possible to seasonally adjust multiple series in a single call to `seas()`.
 This is done by using the built-in batch mode of X-13.
@@ -124,7 +124,7 @@ m_composite <- seas(
 )
 ```
 
-The `final()` command now returns three series, with one adjustmen for each series, and one for the composite (direct) adjustment:
+The `final()` command now returns three series, with one adjustment for each series, and one for the composite (direct) adjustment:
 
 ```{r}
 head(final(m_composite))
@@ -149,7 +149,7 @@ all.equal(final(m_direct), final(m_composite)[, 'composite'])
 
 ### Analyzing the Composite Adjustment
 
-The composite adjustment contains all the information that is needed to analyse the direct vs the indirect adjustment.
+The composite adjustment contains all the information that is needed to analyze the direct vs the indirect adjustment.
 
 ```{r}
 
@@ -178,15 +178,15 @@ Some additional statistics can found in the X-13 output.
 out(m_composite)
 ```
 
-### Indirect vs direct adjusmtent
+### Indirect vs direct adjustment
 
-What we have seen above is an example of indirect vs direct ajustment.
+What we have seen above is an example of indirect vs direct adjustment.
 How to judge which one is better?
 
 The choice between direct and indirect seasonal adjustment may be guided by the expected uses of seasonally adjusted data.
 For some uses, preserving accounting and aggregation relationships in the data may be crucial, while for other uses, the time-series properties of the derived estimates may be more important.
 
-There is no single standard in what's the best practice.
+There is no single standard for what's the best practice.
 Some countries obtain the seasonally adjusted aggregates as the sum of adjusted components, while others prefer to adjust the totals independently.
 This can result in discrepancies between the seasonally adjusted total and the sum of the seasonally adjusted component series.
 
