--- a/references.bib
+++ b/references.bib
@@ -286,3 +286,14 @@
   year={2018},
   publisher={International Monetary Fund}
 }
+
+@article{findley1990sliding,
+  title={Sliding-spans diagnostics for seasonal and related adjustments},
+  author={Findley, David F and Monsell, Brian C and Shulman, Holly B and Pugh, Marian G},
+  journal={Journal of the American Statistical Association},
+  volume={85},
+  number={410},
+  pages={345--355},
+  year={1990},
+  publisher={Taylor \& Francis}
+}
